Solved the CSS issue using no-wrap, expanded the pastebin tables, added an author field to the pastebin

--- a/static/style/pastebin.css
+++ b/static/style/pastebin.css
@@ -18,6 +18,7 @@
 #syntaxTable td.leftSide
 {
 	border-right-style: none;
+	white-space: nowrap;
 }
 
 #syntaxTable td.rightSide
@@ -25,7 +26,7 @@
 	border-left-style: none;
 }
 
-#postDescription, #unitDescription
+#author, #postDescription, #unitDescription
 {
 	width: 20em;
 }
@@ -52,7 +53,9 @@
 	border: 0;
 }
 
+/*
 #commonHighlighting, #advancedHighlighting, #expertHighlighting
 {
 	display: none;
 }
+*/
